--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,8 @@
 ---
-- hosts: web
+- hosts: local
   become: yes
   become_user: root
-  connection: ssh
+  connection: local
   tasks:
     - name: install nginx
       yum:
